created the side bar menu

--- a/index.html
+++ b/index.html
@@ -6,9 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-            <div></div>
+        <div class="container">
+            <div class="dashboard">
+
+                <div class="title"><h2>Dashboard</h2></div>
+
+                <div class="selection">
+                    <div><a href="#">Home</a></div>
+                    <div><a href="#">Profile</a></div>
+                    <div><a href="#">Messages</a></div>
+                    <div><a href="#">History</a></div>
+                    <div><a href="#">Tasks</a></div>
+                    <div><a href="#">Communities</a></div>
+                </div>
+
+
+                <div class="support">
+                    <div><a href="#">Settings</a></div>
+                    <div><a href="#">Support</a></div>
+                    <div><a href="#">Privacy</a></div>
+                </div>
+
+            </div>
+
+
+
+        </div>
 
 </body>
 </html>
